Packaging and Observability (#25)
* Packaging and Observability

* remove redundant

* minor bugfixes
